--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 
         <!--Camera to attach curso if the player is not using the above-->
-        <a-entity id="camera" camera position="0 1.6 0" wasd-controls look-controls="pointerLockEnabled:true"> 
+        <a-entity id="camera" camera position="0 1.6 0" wasd-controls look-controls="reverseMouseDrag:true; touchEnabled: false"> 
         </a-entity>
 
         <!--Collidable floor-->
