--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Whack the Alien</title>
   </head>
   <body>
-    <a-scene id="scene" physics="driver: ammo; debug: false; debugDrawMode: 1;">
+    <a-scene id="scene" physics="driver: ammo; debug: false; debugDrawMode: 1;" vr-mode-ui="enabled: false">
       <a-sound src="assets/theme.mp3" autoplay="true" loop="true" volume="0.5"></a-sound>
         <a-assets>
             <!--Models-->
